# webauthn_verifier

./: .gitignore  Cargo.toml  LICENSE  README.md
pass-webauthn/: Cargo.toml
pass-webauthn/src/: impls.rs  lib.rs  runtime_helpers.rs  tests.rs
pass-webauthn/src/runtime_impls/: assertion.rs  attestation.rs  credential.rs  mod.rs
pass-webauthn/src/tests/: authenticator_client.rs
src/: lib.rs  main.rs
verifier/: Cargo.toml
verifier/src/: lib.rs  tests.rs
