[package]
name = "webauthn_verifier"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coset = { version = "0.3.0", default-features = false }
p256 = { version = "0.13.2", default-features = false }
passkey = { version = "0.3.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }

[dev-dependencies]
rand = "0.8.5"
