[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "pass-webauthn"
repository.workspace = true
version = "0.1.0"

[dependencies]
codec.workspace = true
frame-support.workspace = true
frame-system.workspace = true
scale-info.workspace = true
traits-authn.workspace = true
verifier.workspace = true

[dev-dependencies]
pallet-balances.workspace = true
pallet-pass.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-pass/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "pallet-pass/std",
  "scale-info/std",
  "sp-io/std",
  "sp-runtime/std",
  "traits-authn/std",
  "verifier/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-pass/try-runtime",
  "sp-runtime/try-runtime",
]
