[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "verifier"
repository.workspace = true
version = "0.1.0"

[dependencies]
p256.workspace = true
p256.features = ["ecdsa", "pkcs8"]
sha2.workspace = true

[dev-dependencies]
coset.workspace = true
passkey-authenticator.workspace = true
rand.workspace = true

[features]
default = ["std"]
std = ["coset/std", "p256/std", "sha2/std", "rand/std"]
